[feat] WIP. webcam_audio_to_rtmp temp update

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ video_to_rtmp/build
 
 webcam_to_rtmp/build
 !webcam_to_rtmp/build/*.bat
+
+webcam_audio_to_rtmp/build
+!webcam_audio_to_rtmp/build/*.bat
