[feat] WIP. update .h .cpp for InputFactory && OutputStream

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,7 +86,8 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "*.rh": "cpp"
     },
     "C_Cpp.intelliSenseEngineFallback": "Enabled"
 }
